# AI-Recall

./: .env.example  AGENTS.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml
docs/: PHASE1.md  WEB_UI.md
scripts/: deploy-homelab.sh  quick-deploy.sh
src/: lib.rs  main.rs
src/analysis/: contradictions.rs  mod.rs
src/auth/: mod.rs  session.rs
src/config/: mod.rs
src/embeddings/: mod.rs
src/extractors/: mod.rs
src/graph/: mod.rs  storage.rs
src/mcp/: handler.rs  mod.rs
src/models/: mod.rs
src/storage/: feedback.rs  markdown.rs  mod.rs  qdrant.rs  versioning.rs
src/upload/: mod.rs
tests/: integration_tests.rs
ui/: app.js  index.html  style.css
