[package]
name = "ai-recall"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Self-hosted AI agent memory system with vector search"
license = "Apache-2.0"
repository = "https://github.com/yourusername/ai-recall"
keywords = ["ai", "memory", "mcp", "vector-search", "rust"]
categories = ["command-line-utilities"]

[lib]
name = "ai_recall"
path = "src/lib.rs"

[[bin]]
name = "ai-recall"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# MCP Protocol
rmcp = { version = "0.16", features = ["server"] }

# HTTP Server
axum = { version = "0.7", features = ["tokio", "http1", "http2"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = { version = "1.0", features = ["full"] }

# Qdrant Vector DB
qdrant-client = "1.17"
tonic = "0.12"

# HTTP Client for embeddings
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Markdown processing
pulldown-cmark = "0.12"
pulldown-cmark-to-cmark = "15"

# Graph processing
petgraph = "0.6"

# Cryptography & Hashing
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde", "fast-rng"] }

# Configuration
config = "0.14"
dirs = "5.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Regex
regex = "1.10"

# File system utilities
walkdir = "2.4"
tempfile = "3.9"

# Concurrency
parking_lot = "0.12"
once_cell = "1.19"

# URL parsing
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.9"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
